Complete lasagna recipe page
Completing the lasagna.html page.
Added:
- Image of the finished dish
- Description of the recipe in two paragraphs
- Unordered List of ingredients
- Ordered List of Steps to prepare the dish

--- a/odin-recipes/recipes/lasagna.html
+++ b/odin-recipes/recipes/lasagna.html
@@ -7,5 +7,47 @@
 
   <body>
     <h1>Lasagna Recipe</h1>
+    <img src="./images/Lasagna.jpg" alt="Am image of a piece of lasagna." width="900" height="600">
+    <h2>Recipe Description</h2>
+      <p>
+        Indulge in the comforting layers of flavors with this timeless lasagna recipe.
+        Starting with tender lasagna noodles, each layer is carefully assembled with a rich tomato sauce, savory ground beef or Italian sausage, and creamy ricotta cheese mixed with fragrant herbs.
+        Generously sprinkled with a blend of mozzarella and Parmesan cheese, each bite offers a perfect balance of textures and tastes.
+        Whether served as a cozy family dinner or for entertaining guests, this lasagna is sure to delight palates and warm hearts with its hearty and satisfying essence.
+      </p>
+      <p>
+        Versatile and adaptable, this lasagna recipe invites creativity and personalization.
+        Experiment with different fillings such as spinach and mushrooms for a vegetarian twist, or add layers of roasted vegetables for extra depth and freshness.
+        Make ahead and freeze for busy weeknights, or bake fresh for a comforting meal that brings everyone together.
+        With its timeless appeal and endless possibilities, this lasagna recipe is a true culinary classic that never fails to impress.
+      </p>
+    <h2>Ingredients</h2>
+      <ul>
+        <li>Lasagna noodles (about 12-16 sheets)</li>
+        <li>1 pound (450g) ground beef or Italian sausage</li>
+        <li>1 onion, finely chopped</li>
+        <li>3 cloves garlic, minced</li>
+        <li>1 can (28 ounces) crushed tomatoes</li>
+        <li>2 tablespoons tomato paste</li>
+        <li>1 teaspoon dried oregano</li>
+        <li>1 teaspoon dried basil</li>
+        <li>Salt and pepper to taste</li>
+        <li>15 ounces (425g) ricotta cheese</li>
+        <li>1 large egg</li>
+        <li>1/2 cup grated Parmesan cheese</li>
+        <li>2 cups shredded mozzarella cheese</li>
+        <li>Fresh parsley or basil for garnish (optional)</li>
+      </ul>
+    <h2>Steps</h2>
+      <ol>
+        <li><strong>Preheat the oven:</strong> Preheat your oven to 375°F (190°C).</li>
+        <li><strong>Cook the noodles:</strong> Bring a large pot of salted water to a boil. Cook the lasagna noodles according to the package instructions until they are al dente (firm to the bite). Drain and set aside.</li>
+        <li><strong>Prepare the sauce:</strong> In a large skillet or saucepan, brown the ground beef or Italian sausage over medium heat, breaking it up with a spoon as it cooks. Once browned, remove any excess fat from the pan. Add the chopped onion and minced garlic, and cook until softened, about 5 minutes. Stir in the crushed tomatoes, tomato paste, dried oregano, dried basil, salt, and pepper. Simmer the sauce for about 10-15 minutes, allowing the flavors to meld together.</li>
+        <li><strong>Prepare the cheese mixture:</strong> In a mixing bowl, combine the ricotta cheese, egg, and grated Parmesan cheese. Mix until well combined.</li>
+        <li><strong>Assemble the lasagna:</strong> Spread a thin layer of the tomato sauce on the bottom of a 9x13-inch baking dish. Arrange a layer of cooked lasagna noodles over the sauce. Spread half of the ricotta cheese mixture evenly over the noodles. Sprinkle with a layer of shredded mozzarella cheese. Repeat the layers, ending with a final layer of noodles topped with the remaining sauce and shredded mozzarella cheese.</li>
+        <li><strong>Bake the lasagna:</strong> Cover the baking dish with aluminum foil and bake in the preheated oven for 25 minutes. Then, remove the foil and continue baking for an additional 15-20 minutes, or until the cheese is melted and bubbly and the edges are golden brown.</li>
+        <li><strong>Let it rest:</strong> Allow the lasagna to cool for 10-15 minutes before slicing. This allows the layers to set and makes it easier to serve.</li>
+        <li><strong>Serve and enjoy:</strong> Garnish the lasagna with fresh parsley or basil, if desired, and slice into portions. Serve warm and enjoy your delicious homemade lasagna!</li>
+      </ol>
   </body>
 </html>
