--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -7,6 +7,10 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna Recipe</a>
+    <ul>
+      <li><a href="./recipes/lasagna.html" >Lasagna Recipe</a></li>
+      <li><a href="./recipes/spring-orzo-risotto.html" >Spring Orzo Risotto Recipe</a></li>
+      <li><a href="./recipes/spinach-strawberry-salad.html" >Spinach and Strawberry Salad Recipe</a></li>
+    </ul>
   </body>
 </html>
