--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -8,9 +8,9 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a href="./recipes/lasagna.html" >Lasagna Recipe</a></li>
-      <li><a href="./recipes/spring-orzo-risotto.html" >Spring Orzo Risotto Recipe</a></li>
-      <li><a href="./recipes/spinach-strawberry-salad.html" >Spinach and Strawberry Salad Recipe</a></li>
+      <li><a href="./recipes/lasagna.html" target="_blank" rel="noopener noreferrer" >Lasagna Recipe</a></li>
+      <li><a href="./recipes/spring-orzo-risotto.html" target="_blank" rel="noopener noreferrer" >Spring Orzo Risotto Recipe</a></li>
+      <li><a href="./recipes/spinach-strawberry-salad.html" target="_blank" rel="noopener noreferrer" >Spinach and Strawberry Salad Recipe</a></li>
     </ul>
   </body>
 </html>
