--- a/foundations/odin-recipes/recipes/lasagna.html
+++ b/foundations/odin-recipes/recipes/lasagna.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1>Lasagna Recipe</h1>
-      <img src="./images/Lasagna.jpg" alt="Am image of a piece of lasagna." width="1600" height="1301">
+      <img src="images/Lasagna.jpg" alt="Am image of a piece of lasagna." width="1600" height="1301">
     <h2>Recipe Description</h2>
       <p>
         Indulge in the comforting layers of flavors with this timeless lasagna recipe.
