--- a/foundations/odin-recipes/recipes/spinach-strawberry-salad.html
+++ b/foundations/odin-recipes/recipes/spinach-strawberry-salad.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1>Spinach and Strawberry Salad</h1>
-      <img src="./images/strawberry-spinach-salad.jpg" alt="An images of a spinach and strawberry salad." width="800" height="1208">
+      <img src="images/strawberry-spinach-salad.jpg" alt="An images of a spinach and strawberry salad." width="800" height="1208">
     <h2>Recipe Description</h2>
       <p>My family loves this spinach strawberry salad all year-round, if we can find strawberries. Even the grandchildren love this quick and easy salad.</p>
     <h2>Ingredients</h2>
