--- a/foundations/odin-recipes/recipes/spring-orzo-risotto.html
+++ b/foundations/odin-recipes/recipes/spring-orzo-risotto.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1>Spring Orzo Risotto Recipe</h1>
-      <img src="./images/risotto.jpg" alt="An image of a spring orzo risotto." width="1000" height="1500">
+      <img src="images/risotto.jpg" alt="An image of a spring orzo risotto." width="1000" height="1500">
     <h2>Recipe Description</h2>
       <p>
         I thought I had Arborio rice but I obviously did not.
