Add css to recipes main page
Added a bit of css styling to the odin-recipes project

--- a/foundations/odin-recipes/index.html
+++ b/foundations/odin-recipes/index.html
@@ -3,14 +3,22 @@
   <head>
     <meta charset="UTF-8">
     <title>My first webpage</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-      <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer" >Lasagna Recipe</a></li>
-      <li><a href="recipes/spring-orzo-risotto.html" target="_blank" rel="noopener noreferrer" >Spring Orzo Risotto Recipe</a></li>
-      <li><a href="recipes/spinach-strawberry-salad.html" target="_blank" rel="noopener noreferrer" >Spinach and Strawberry Salad Recipe</a></li>
-    </ul>
+    <header class="heading">
+      <h1 id="page-title">Odin Recipes</h1>
+    </header>
+    <main class="page-content">
+      <ul>
+        <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer" >Lasagna Recipe</a></li>
+        <li><a href="recipes/spring-orzo-risotto.html" target="_blank" rel="noopener noreferrer" >Spring Orzo Risotto Recipe</a></li>
+        <li><a href="recipes/spinach-strawberry-salad.html" target="_blank" rel="noopener noreferrer" >Spinach and Strawberry Salad Recipe</a></li>
+      </ul>
+    </main>
+    <footer>
+        <p>&copy; 2024 Muhamed Jonuzovic</p>
+    </footer>
   </body>
 </html>
