Add css to recipes main page
Added a bit of css styling to the odin-recipes project

--- a/foundations/odin-recipes/index.html
+++ b/foundations/odin-recipes/index.html
@@ -18,7 +18,7 @@
       </ul>
     </main>
     <footer>
-        <p>&copy; 2024 Muhamed Jonuzovic</p>
+        <p class="foot">&copy; 2024 Muhamed Jonuzovic</p>
     </footer>
   </body>
 </html>
